fixed ws on ios

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -77,7 +77,13 @@ html {
   color: white;
   font-weight:bold;
   margin-bottom: 0px;
+  text-align: center;
   display:none;
+}
+
+#alert-msg {
+	padding: 0;
+	margin: 0;
 }
 
 /* The close button */
